--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,4 +1,9 @@
 fr:
+  navbar:
+    faq: FAQ
+    school: École
+    contact: Contact
+
   faq:
     page_title: À vos snows - FAQ
 
@@ -7,8 +12,14 @@ fr:
 
   contact:
     page_title: À vos snows - Contact
-    section_contact_title: Contactez-nous
-    section_contact_content: Je suis joignable 7/7j de 8h à 21h
+    title: Contactez-nous
+    content: Je suis joignable 7/7j de 8h à 21h
+    infos: +33 6 75 42 53 29 / adele@avossnows.com
+
+  contacts:
+    create:
+      message: 'Merci pour votre message, on revient vers vous très bientôt !'
+      alert: "Problème dans l'envoi du message"
 
   form:
     name_label: Nom
